spade-tests/src/snapshots/spade_tests__typeinference__accessing_a_generic_fixed_field_works.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---

