spade-tests/src/snapshots/spade_tests__typeinference__argument_type_mismatch_positional.snap
---
source: spade-tests/src/typeinference.rs
---
entity e(clk: clock, a: bool) -> bool {
    a
}

entity main(clk: clock) -> bool {
    let a: int<3> = 0;
    inst e(clk, a)
}


error: Argument type mismatch. Expected bool got int<3>
  ┌─ testinput:7:17
  │
6 │     let a: int<3> = 0;
  │            ------ Type int<3> inferred here
7 │     inst e(clk, a)
  │                 ^ Expected bool
  │
  = note: Expected: bool
               Got: int<3>
