spade-tests/src/snapshots/spade_tests__typeinference__deprecated_tuple_indexing_syntax_warning.snap
---
source: spade-tests/src/typeinference.rs
---
entity name(x: (bool, bool)) -> bool {
    x#0
}

warning: Deprecated tuple syntax indexing
  ┌─ testinput:2:5
  │
2 │     x#0
  │     ^^^ `#` syntax for tuple indexing is deprecated
  │
  = note: replace `#` with `.`
